RP-986 Add support for displaying 'superseded' flag in Component Traceability